# Underwater_ECA_A9

./: README.md  test dos
configuration/: CMakeLists.txt  package.xml
configuration/launch/: upload_eca_a9.launch
configuration/robots/: eca_a9_default.urdf.xacro
configuration/urdf/: eca_a9_base.xacro
control/control/: CMakeLists.txt  package.xml
control/control/config/: model_params.yaml
control/control/launch/: start_geometric_tracking_control.launch  start_geometric_tracking_control_multi_und.launch  start_trajectory.launch  start_trajectory_Npolygon.launch  start_trajectory_circle.launch  start_trajectory_circle_fleet.launch  start_trajectory_random_file.launch  start_trajectory_rect.launch  start_trajectory_rect_file.launch  start_underwater.launch
control/control/rviz/: eca_a9_control.rviz  eca_a9_control_fleet_10.rviz  eca_a9_control_fleet_20.rviz  eca_a9_control_fleet_4.rviz  eca_a9_control_fleet_4_2.0.rviz  eca_a9_control_multi.rviz
definition/: CMakeLists.txt  package.xml
definition/launch/: upload_eca_a9.launch
definition/mesh/: eca_a9.dae
definition/robots/: eca_a9_default.urdf.xacro
definition/urdf/: eca_a9_base.xacro
description_und/: CMakeLists.txt  package.xml
description_und/launch/: upload_eca_a9.launch
description_und/robots/: eca_a9_default.urdf.xacro
description_und/urdf/: eca_a9_base.xacro  eca_a9_sensors.xacro  eca_a9_snippets.xacro
gazebo/: CMakeLists.txt  package.xml
gazebo/config/: waypoint_set.yaml
gazebo/launch/: record_demo.launch  start_underwater_world.launch
gazebo_und/: CMakeLists.txt  package.xml
gazebo_und/config/: waypoint_set_random_path.yaml  waypoint_set_rectangle.yaml
gazebo_und/launch/: multi_underwaters.launch  record_demo.launch  start_multi_underwaters.launch  start_trajectory_control_Npolygon.launch  start_trajectory_control_circle.launch  start_trajectory_control_random_path.launch  start_trajectory_control_rectangle.launch  start_underwater_fleet.launch  start_underwater_ocean.launch  start_underwater_trajectory_control.launch  underwater.launch
gazebo_und/launch/multi_underwater/: multi_underwaters.launch
gazebo_und/launch/underwater_fleet/: fleet_underwater.launch  one_underwater.launch  ten_underwater_row.launch
