<?xml version="1.0"?>
<package format="2">
  <name>configuration</name>
  <version>0.0.0</version>
  <description>The configuration package</description>

  <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tools</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>

</package>
