<?xml version="1.0"?>
<package format="2">
  <name>gazebo</name>
  <version>0.1.1</version>
  <description>The gazebo package</description>

    <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
