<?xml version="1.0"?>
<package format="2">
  <name>gazebo</name>
  <version>0.0.0</version>
  <description>The gazebo package</description>

    <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>configuration</exec_depend>
  <exec_depend>control</exec_depend>

</package>
