<?xml version="1.0"?>
<package format="2">
  <name>control</name>
  <version>0.1.1</version>
  <description>The control package</description>

  <maintainer email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</maintainer>

  <author email="alamcastillo@outlook.com">Alam CASTILLO HERRERA</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

